2008-03-26  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/producers/soundcard/soundcard_wizard.py:
	Remove 8 bit option for soundcard completely.

2008-03-26  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	reviewed by: Johan Dahlin

	* flumotion/component/producers/soundcard/soundcard_wizard.py:
	Use sensible defaults for soundcard producer.
	Fixes #870.

2008-03-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/producers/audiotest/audiotest-wizard.glade:
	  Add units.

2008-03-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/producers/videotest/videotest-wizard.glade:
	  Add units.

2008-03-26  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	reviewed by: Michael Smith

	* flumotion/admin/gtk/client.py:
	* flumotion/manager/admin.py:
	Remove dangerous debug options. Fixes #893.

2008-03-26  Sebastien Merle  <sebastien@fluendo.com>

	reviewed by: Johan Dahlin

	* flumotion/admin/gtk/parts.py:
	Do not use data function for PID column, it cannot be sorted.
	Fixes #312.

2008-03-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/Makefile.am:
	* data/glade/wizard_source.glade:
	* data/glade/wizard_production.glade:
	* flumotion/component/consumers/httpstreamer/httpstreamer_wizard.py:
	* flumotion/component/producers/audiotest/audiotest_wizard.py:
	* flumotion/component/producers/bttv/bttv_wizard.py:
	* flumotion/component/producers/firewire/firewire_wizard.py:
	* flumotion/component/producers/soundcard/soundcard_wizard.py:
	* flumotion/component/producers/videotest/videotest_wizard.py:
	* flumotion/component/producers/webcam/webcam_wizard.py:
	* flumotion/test/test_wizard.py:
	* flumotion/wizard/basesteps.py:
	* flumotion/wizard/configurationwizard.py:
	* flumotion/wizard/conversionsteps.py:
	* flumotion/wizard/overlaystep.py:
	* flumotion/wizard/productionsteps.py:
	* po/POTFILES.in: