@@ -1,3 +1,12 @@
+2008-03-26  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	reviewed by: Johan Dahlin
+
+	* flumotion/component/encoders/theora/theora-wizard.glade:
+	* flumotion/component/encoders/theora/theora_wizard.py:
+	  Use keyframe delta (in seconds), which is more natural than
+	  keyframe spacing in frames.  Fixes #885.
+
 2008-03-26  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/component/producers/soundcard/soundcard_wizard.py:
